[project]
name = "phopyqthelper"
version = "0.1.0"
description = "Reusable Qt widgets and helpers for Python applications"
readme = "README.md"
authors = [
    { name = "Pho Hale", email = "PhoHale@gmail.com" }
]
requires-python = ">=3.8.10"
dependencies = [
    "pyqt6>=6.7.1",
    "qtpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phopyqthelper"]
